products scrollbar needs to be fixed

--- a/src/pages/home-page/styles/section.scss
+++ b/src/pages/home-page/styles/section.scss
@@ -1,11 +1,11 @@
 .c-section {
     max-width: 1440px;
-    padding: 143px 450px;
+    padding: 143px 0;
 }
 
 @media screen and (min-width: 500px) and (max-width: 900px) {
     .c-section {
-        padding: 228px 147px;
+        padding: 228px 0;
     }
 }
 
